--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         your brand as if it <br>
                         is their own?</h1>    
                     
-                    <p>VisionAds is not your average marketing agency. You will have a <br>
+                    <p>VisionAds isn't your average marketing agency. You will have a <br>
                          dedicated, honest and proactive partner where your success will be my <br>  
                          success. I choose only to work with a limited number of partners to ensure <br>  
                          full focus on scaling their business.</p>  
@@ -263,6 +263,7 @@
    
   </body>
 </html>
+
 
 
 
