--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo01">
           <ul class="navbar-nav me-3 mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-center active" href="#"> CliInterview</a>
+              <a class="nav-link text-center active" href="#"> Client Interview</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-center" href="#">Success Cases</a>
@@ -263,6 +263,7 @@
    
   </body>
 </html>
+
 
 
 
